--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>My HTML Title</title>
+  </head>
+  <body>
+  </body>
+</html>
